# real_time_betting_validation_api

./: .gitignore  DEPLOYMENT.md  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/configuration/: base.yaml  production.yaml
backend/k6/: functional_test.js  load_test.js
backend/migrations/: 202601302200_create_users_table.sql  202601302211_create_bets_table.sql  20260318154020_create_processed_match_results.sql
backend/scripts/: init_db.sh
backend/src/: lib.rs  main.rs
backend/src/application/: place_bet.rs
backend/src/config/: mod.rs
backend/src/db/: cache.rs  mod.rs
backend/src/domain/: betting.rs  errors.rs  mod.rs  models.rs  money.rs  ports.rs  validation.rs
backend/src/errors/: mod.rs
backend/src/handlers/: betting.rs  dto.rs  mod.rs  subscriptions.rs
backend/src/handlers/ws/: manager.rs  mod.rs  session.rs
backend/src/infrastructure/: database.rs  redis_repo.rs
backend/src/infrastructure/cache/: mod.rs
backend/src/infrastructure/persistence/: bet_repository.rs
backend/src/infrastructure/workers/: bet_persister.rs  settlement_worker.rs
backend/src/middlewares/: mod.rs  rate_limit.rs
backend/src/routes/: mod.rs
backend/src/telemetry/: metrics.rs  mod.rs
backend/tests/: api_integration_test.rs
docs/: architecture.md  architecture_decision_record.md  deployment.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/public/css/: style.css
frontend/public/js/: app.js
frontend/src/app/: globals.css
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: balance-indicator.tsx  betting-slip.tsx  connection-status.tsx  live-odds-row.tsx  live-odds-table.tsx  providers.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: use-active-matches.ts  use-live-odds.ts  use-odds-change.ts  use-place-bet.ts  use-socket.ts  use-user-history.ts
frontend/src/lib/: api.ts  mock-socket.ts  socket.ts
frontend/src/store/: betting-store.ts  odds-store.ts  selections-store.ts
frontend/src/types/: domain.ts
infrastructure/: docker-compose.yml
scripts/: setup_db.sh
