[package]
name = "high_concurrency_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "high_concurrency_api"
path = "src/main.rs"

[dependencies]
# Framework Web
actix-web = "4.4"
actix-cors = "0.6"

# Runtime Asíncrono
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2"
secrecy = { version = "0.8", features = ["serde"] }

# cliente http para upstash rest
reqwest = { version = "0.11", features = ["json"] }

# base de datos (rustls para evitar problemas con openssl en docker)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuración
config = "0.13"
dotenvy = "0.15"

# Observabilidad y Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"

# utilidades
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }

# métricas prometheus (opcional, útil para alta concurrencia)
actix-web-prom = "0.6"
argon2 = { version = "0.5", features = ["std"] }
deadpool-redis = "0.14"
actix-ws = "0.2.5"
futures-util = "0.3"
dashmap = "5.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"
fake = "2.6"
quickcheck = "1.0"
quickcheck_macros = "1.0"